--- a/latex/Seminararbeit_CFS.tex
+++ b/latex/Seminararbeit_CFS.tex
@@ -57,7 +57,7 @@ Die grundlegende Aufgabe eines Prozess - Schedulers ist es, lauffähige Prozesse
 % Section-Überschriften werden in GROSSBUCHSTABEN umgestellt
 \section{Einleitung}
 Ein Betriebssystem kann als eine Komposition von Computerprogrammen definiert werden, das die Hardware eines Computers verwaltet und Anwendungsprogrammen zur Verfügung stellt. Die Software Betriebssystem fungiert als Vermittler zwischen dem Benutzer eines Computers und dessen Hardware. Dabei ist der Prozess - Scheduler eines Betriebssystems für die Verteilung der CPU-Bandbreite gegenüber von Aufgaben (Prozessen) zuständig. Der Algorithmus des Schedulers bestimmt die Reihenfolge der Abarbeitung und wirkt auf die optimale Leistung ein.\\
-Der Linux-Kernel ist einer der Bereiche, die aktiv durch die Open-Source-Community entwickelt und verbessert werden. Darunter fällt auch die Implementierung des CPU - Schedulers. Der Completely Fair Scheduler (CFS) löste mit der Kernelversion 2.6.23 den seit Version 2.6 im Einsatz befindlichen O(1)-Scheduler ab.\\
+Der Linux-Kernel ist einer der Bereiche, die aktiv durch die Open - Source - Community entwickelt und verbessert werden. Darunter fällt auch die Implementierung des CPU - Schedulers. Der Completely Fair Scheduler (CFS) löste mit der Kernelversion 2.6.23 den seit Version 2.6 im Einsatz befindlichen O(1)-Scheduler ab.\\
 In diesem Artikel werden die Prinzipien und Funktionsweisen dieses Prozess - Schedulers dargestellt. Ferner wird kurz auf die Implementierung im aktuellen Linux - Kernel eingegangen sowie ein Vergleich zum Vorgänger vorgenommen.\\
 Dazu wird einleitend in Abschnitt \ref{s:basics} der Begriff Scheduling definiert sowie wichtige Parameter für Scheduling - Verfahren vorgestellt. Ferner erfolgt eine Beschreibung zur elementaren Datenstruktur Rot - Schwarz - Baum. Abschließend wird das im CFS zum Einsatz kommende \textit{completely fair} Prinzip erläutert.\\
 Abschnitt \ref{s:cfsmain} widmet sich der grundlegenden Funktionsweise inklusive Beschreibung der mathematischen Berechnungen wichtiger Variablen. Darauf folgend wird die Implementierung im Linux - Kernel beschrieben und somit das Prinzip des CFS exemplifiziert. Am Ende wird ein Vergleich der Scheduler CFS und O(1) hinsichtlich Fairness und Interaktivität exzerpiert. \\
@@ -81,9 +81,9 @@ Ziel dieses Abschnittes ist es, dem Leser ein grundlegendes Verständnis für di
 \input{sections/comp_to_O1}
 
 \section{Zusammenfassung}\label{s:end}
-In dieser Arbeit sind die grundlegenden Eigenschaften und der Aufbau des CF - Schedulers dargestellt. Es wird gezeigt, dass der CF - Scheduler mit Hilfe effizienter Algorithmen, einfachen Prinzipien und der Datenstruktur Rot - Schwarz - Baum versucht, immer eine faire Verteilung unter den aufzuführenden Prozessen zu erreichen. Zugleich wird dabei auch weiterhin eine annähernde Multitask - Umgebung beibehalten. Im Vergleich zum O(1) - Scheduler wird bewiesen, dass der CFS das Kriterium Fairness deutlich verfeinert. Darüber hinaus wird aufgezeigt, dass der CFS mit einer besseren Fairness trotzdem gute Latenzzeiten im Bereich von interaktiven Aufgaben aufweist ohne diese explizit zu bevorzugen.
+In dieser Arbeit sind die grundlegenden Eigenschaften und der Aufbau des CFS - Schedulers dargestellt. Es wird gezeigt, dass der CFS - Scheduler mit Hilfe effizienter Algorithmen, einfachen Prinzipien und der Datenstruktur Rot - Schwarz - Baum versucht, immer eine faire Verteilung unter den aufzuführenden Prozessen zu erreichen. Zugleich wird dabei auch weiterhin eine annähernde Multitask - Umgebung beibehalten. Im Vergleich zum O(1) - Scheduler wird bewiesen, dass der CFS das Kriterium Fairness deutlich verfeinert. Darüber hinaus wird aufgezeigt, dass der CFS mit einer besseren Fairness trotzdem gute Latenzzeiten im Bereich von interaktiven Aufgaben aufweist ohne diese explizit zu bevorzugen.
 
-Ein großes Problem stellt sich allerdings heraus, wenn der CF - Scheduler mit zu vielen Prozessen konfrontiert wird. Über\-steigt die Menge der Anfragen einen gewissen Rahmen, so wird sich der Scheduler mehr und mehr den  \textit{com\-pletely-fair}-Prinzipien entfernen.  
+Ein großes Problem stellt sich allerdings heraus, wenn der CFS - Scheduler mit zu vielen Prozessen konfrontiert wird. Über\-steigt die Menge der Anfragen einen gewissen Rahmen, so wird sich der Scheduler mehr und mehr den  \textit{com\-pletely-fair}-Prinzipien entfernen.  
 
 Auch Programme, welche mit sehr vielen Threads arbeiten, zwingen den Scheduler zu einem Ungleichgewicht. Da dieser Prozess - Scheduler taskbasiert arbeitet, erhalten Programme mit einer hohen Anzahl von Threads eine für sie vorteilhafte, aber für andere Programme unfaire Prozessorzuteilung. Ein Lösung für dieses Problem könnte der bereits in Entwicklung befindliche Process - Fair - Scheduler (PFS) bereitstellen. Dieser versucht eine faire Verteilung über die Prozesse selbst zu erreichen. Dabei wird z.B. das Gewicht des anstehenden Prozesses nochmal durch die Anzahl der Threads des sich gerade in Ausführung befindenen Programmes geteilt. Wie weit sich dieser Ansatz allerdings durchsetzen wird, muss in Zukunft durch praktischen Einsatz erprobt werden.
 
