--- a/latex/sections/rb_tree.tex
+++ b/latex/sections/rb_tree.tex
@@ -4,9 +4,9 @@ Der Rot-Schwarz-Baum stellt eine Erweiterung des bin-ären Suchbaums dar. Er wur
 Ein binärer Suchbaum eignet sich zum schnellen Finden von Schlüsselelementen. Dabei werden die Elemente nicht wie in einer Liste sequentiell durchsucht, sondern es wird mit einer bestimmten Logik vorgegangen.
 Damit kann im Vergleich zur sequentiellen Liste die Laufzeit für verschiedene Operationen verkürzt werden.
 
-Die Anordnung der Elemente wird, wie im Namen bereits enthalten, als Baum vorgenommen. Dabei müssen bestimmte Kriterien für die Anordnung eingehalten werden. Liegt eine bestimmte Anzahl von Elementen vor, die als Binär-Baum angeordnet werden sollen, so wird zunächst ein beliebiges Element ausgewählt und als Wurzel gesetzt. Damit kann es allerdings passieren, dass der Baum später nicht ausgeglichen ist, und alle Äste unterschiedliche Dimensionen aufweisen. Dies würde zu einer unausgewogenen Suche führen. Daher ist es Sinnvoll an dieser Stelle ein Element mit einem Schlüsselwert zu finden, welcher sich relativ in der Mitte der vorkommenden Skala und welcher sich zudem auch bezüglich der Anzahl der Elemente in der Mitte befindet.
+Die Anordnung der Elemente wird, wie im Namen bereits enthalten, als Baum vorgenommen. Dabei müssen bestimmte Kriterien für die Anordnung eingehalten werden. Liegt eine bestimmte Anzahl von Elementen vor, die als Binär - Baum angeordnet werden sollen, so wird zunächst ein beliebiges Element ausgewählt und als Wurzel gesetzt. Damit kann es allerdings passieren, dass der Baum später nicht ausgeglichen ist, und alle Äste unterschiedliche Dimensionen aufweisen. Dies würde zu einer unausgewogenen Suche führen. Daher ist es Sinnvoll an dieser Stelle ein Element mit einem Schlüsselwert zu finden, welcher sich relativ in der Mitte der vorkommenden Skala und welcher sich zudem auch bezüglich der Anzahl der Elemente in der Mitte befindet.
 
-Danach werden die nächste Elemente der Reihe nach mit der Wurzel verglichen. Ist das momentan betrachtete Elemente größer als das Wurzel-Element, so wird es an der rechten Seite unter der Wurzel angeordnet. Ist es kleiner als die Wurzel, so kommt es auf die linke Seite. Nun kann das nächste Element mit der Wurzel verglichen werden. Wie im obigen Fall wird es, wenn es größer ist, der rechten Seite zugeordnet und wenn es kleiner ist, der linke Seite. An dieser Stelle kann es jetzt passieren, dass auf der ausgewählten Seite bereits ein Blatt bzw. ein Knoten existiert. Hier muss nun ein weiterer Vergleich stattfinden. Wiederum wird geprüft, ob des momentan ausgewählte Elemente größer oder kleiner ist als dieser Knoten. Dann wird es entsprechend unter dieses Element angefügt. Somit entsteht ein Baum. Wichtig ist in diesem Verfahren, dass jeder Knoten nur maximal zwei Elemente besitzen darf. 
+Danach werden die nächste Elemente der Reihe nach mit der Wurzel verglichen. Ist das momentan betrachtete Elemente größer als das Wurzel - Element, so wird es an der rechten Seite unter der Wurzel angeordnet. Ist es kleiner als die Wurzel, so kommt es auf die linke Seite. Nun kann das nächste Element mit der Wurzel verglichen werden. Wie im obigen Fall wird es, wenn es größer ist, der rechten Seite zugeordnet und wenn es kleiner ist, der linke Seite. An dieser Stelle kann es jetzt passieren, dass auf der ausgewählten Seite bereits ein Blatt bzw. ein Knoten existiert. Hier muss nun ein weiterer Vergleich stattfinden. Wiederum wird geprüft, ob des momentan ausgewählte Elemente größer oder kleiner ist als dieser Knoten. Dann wird es entsprechend unter dieses Element angefügt. Somit entsteht ein Baum. Wichtig ist in diesem Verfahren, dass jeder Knoten nur maximal zwei Elemente besitzen darf. 
 
 Die Suche nachher im Baum gestaltet sich ähnlich. Soll ein Element im Baum gesucht werden, so wird ein Vergleich an der Wurzel des Baumes gestartet. Ist der Schlüs\-sel des zu suchenden Elements größer, so wird auf die nächste untere Ebene der rechten Seite gewechselt. Ist der Schlüssel kleiner, dann findet der Wechsel entsprechend auf der linken Seite statt. 
 
@@ -16,11 +16,11 @@ Während beim sequentiellen Suchen der Maxmimalwert der Laufzeit $O(n)$ betragen
 
 Allerdings kann es auch durch ständiges Löschen und Ein-fügen von Elementen oder aber auch durch eine unvorteilhafte Wahl des Wurzelknotens dazu kommen, dass der Baum aus dem Gleichgewicht gerät. Dies bedeutet, dass eine Seite des Baumes erheblich mehr Knoten besitzt als die andere. Damit würde der Baum in ein Ungleichgewicht fallen. Dadurch wird sich die Suchlaufzeit auf der einen Seite erhöhen und auf der anderen Seite ver\-kürzen. Im Extremfall wären alle Elemente auf einer Seite hintereinander angeordnet und somit wäre die Laufzeit gleich der einer sequentiellen Liste.
 
-Eine solche Fehlanpassung kann mit Hilfe des Rot\--Schwarz-Baumes kompensiert werden. Dieser stellt eine Eweiterung des Binären-Suchbaums dar. Damit ist es möglich, einen sich ständig ändernden Baum in einem annähernden Gleichgewicht zu halten. 
+Eine solche Fehlanpassung kann mit Hilfe des Rot - Schwarz - Baumes kompensiert werden. Dieser stellt eine Eweiterung des binären Suchbaums dar. Damit ist es möglich, einen sich ständig ändernden Baum in einem annähernden Gleichgewicht zu halten. 
 
-Der Rot-Schwarz-Baum erhält seinen Namen durch ein Farbattribut, welches zusätzlich an jeden Knoten an\-gehängt wird. Dieses Farbattributs kann entweder die Farbe Rot oder die Farbe Schwarz enthalten. 
+Der Rot - Schwarz - Baum erhält seinen Namen durch ein Farbattribut, welches zusätzlich an jeden Knoten an\-gehängt wird. Dieses Farbattributs kann entweder die Farbe Rot oder die Farbe Schwarz enthalten. 
 Mit Hilfe dieses Attributes kann dann der Baum nach bestimmten Regeln bearbeitet werden, welche dafür Sorgen, dass immer ein grundlegendes Gleichgewicht im Baum herrscht. 
-In Abbildung \ref{fig:rbtree} ist der Aufbau eines Rot-Schwarz-Baumes zu sehen.
+In Abbildung \ref{fig:rbtree} ist der Aufbau eines Rot - Schwarz - Baumes zu sehen.
 
 \begin{figure}[h]
 	\centering
@@ -31,7 +31,7 @@ In Abbildung \ref{fig:rbtree} ist der Aufbau eines Rot-Schwarz-Baumes zu sehen.
 \end{figure}
 
  
-Nach \cite{tcormen} müssen folgende Regeln eingehalten werden, damit ein Rot-Schwarz-Baum zustande kommt:
+Nach \cite{tcormen} müssen folgende Regeln eingehalten werden, damit ein Rot - Schwarz - Baum zustande kommt:
 
 \begin{enumerate}
 	\item Jeder Knoten ist entweder rot oder schwarz.
