--- a/latex/sections/scheduling.tex
+++ b/latex/sections/scheduling.tex
@@ -20,11 +20,11 @@ An einem Airline-Termi"-nal eines größeren Flughafens gibt es dutzende Gates u
 Der Scheduler muss die Flugzeuge so den Gates zuweisen, dass dies physisch möglich ist. Dies impliziert, dass die Flugzeuge an die Gates passen und diese zur geplanten Ankunftszeit auch zur Verfügung stehen. Anforderungen wie die zeitliche Reduktion eines Arbeitsvorgangs für das Airline Personal oder die Reduzierung von Verspätungen müssen dabei optimiert werden.\\
 In diesem Beispiel sind die Gates die Ressourcen und die Wartung der Flugzeuge die Aufgaben. 
 \end{description}
-Im Kontext des \textit{Prozess-Scheduling} definiert Avi Silberschatz in \cite{asilberschatz}, dass dieses dafür verantwortlich ist, dass die Prozesse aus den Warteschlangen ausgeführt werden können. Dazu erteilt der Scheduler den Prozessen eine gewisse Zeit lang die CPU, in der sie diese Ressource benutzen können. Dabei müssen sowohl im Bezug auf die Prozesse als auch im Bezug auf das Gesamtsystem folgende Ziele optimiert werden \cite{asilberschatz} \cite{rlove}.\\
-\textbf{Effizienz} ist im Sinne der Kosten-Nutzen-Relation gleich Ertrag durch Aufwand und ist ein Maß für den Umgang mit knappen Ressourcen (CPU, Fertigungsmaschine, Flughafengate, etc.). Um untätige Zeiten zu vermeiden, sollten also eine CPU maximal ausgelastet sein. Ebenso ist es wichtig einen hohen \textbf{Durchsatz} zu erreichen. Für das Scheduling bedeutet dies, dass möglichst viele Aufgaben pro Zeiteinheit ausgeführt werden sollen. Der Durchsatz hängt de facto stark von der Komplexität der Jobs in Verbindung mit der Masse an Jobs ab. \textbf{Fairness} ist im Kontext des CFS ein sehr wichtiger Faktor (siehe auch \ref{s:fair}): Die Neutralität von Ressourcen sollte gewährleistet sein; jedem Prozess ist im Gesamten die gleiche Prozessorzeit zuzuteilen. Damit wird verhindert, dass eine Instanz \textit{verhungert}, somit nicht dauerhaft vernachlässigt wird. Mechanismen für Fairness sind beispielsweise \textit{Preemption} (Verdrängung) oder \textit{Round Robin} (Zeitscheibenverfahren). 
-Aufgaben, die ein Ablaufdatum besitzen, müssen so eingeplant werden, dass der definierte Zeitpunkt eingehalten wird. Es existieren unterschiedliche Formen von \textbf{Deadlines} bzw. Echtzeitanforderungen: Bei einer \textit{harten} Deadline muss das Ablaufdatum präzise, bei \textit{weicher} Deadline einigermaßen eingehalten werden. Ferner sollte bei jedem Scheduling - Algorithmus versucht werden, die \textbf{Komplexität} so gering wie möglich zu halten (niedrige Aufwände im Bezug auf die O-Notation). Die Scheduling-Operatio"-nen sollten \textbf{einfach und schnell} verfahren sowie transparent sein.  
+Im Kontext des \textit{Prozess - Scheduling} definiert Avi Silberschatz in \cite{asilberschatz}, dass dieses dafür verantwortlich ist, dass die Prozesse aus den Warteschlangen ausgeführt werden können. Dazu erteilt der Scheduler den Prozessen eine gewisse Zeit lang die CPU, in der sie diese Ressource benutzen können. Dabei müssen sowohl im Bezug auf die Prozesse als auch im Bezug auf das Gesamtsystem folgende Ziele optimiert werden \cite{asilberschatz} \cite{rlove}.\\
+\textbf{Effizienz} ist im Sinne der Kosten - Nutzen - Relation gleich Ertrag durch Aufwand und ist ein Maß für den Umgang mit knappen Ressourcen (CPU, Fertigungsmaschine, Flughafengate, etc.). Um untätige Zeiten zu vermeiden, sollten also eine CPU maximal ausgelastet sein. Ebenso ist es wichtig einen hohen \textbf{Durchsatz} zu erreichen. Für das Scheduling bedeutet dies, dass möglichst viele Aufgaben pro Zeiteinheit ausgeführt werden sollen. Der Durchsatz hängt de facto stark von der Komplexität der Jobs in Verbindung mit der Masse an Jobs ab. \textbf{Fairness} ist im Kontext des CFS ein sehr wichtiger Faktor (siehe auch \ref{s:fair}): Die Neutralität von Ressourcen sollte gewährleistet sein; jedem Prozess ist im Gesamten die gleiche Prozessorzeit zuzuteilen. Damit wird verhindert, dass eine Instanz \textit{verhungert}, somit nicht dauerhaft vernachlässigt wird. Mechanismen für Fairness sind beispielsweise \textit{Preemption} (Verdrängung) oder \textit{Round Robin} (Zeitscheibenverfahren). 
+Aufgaben, die ein Ablaufdatum besitzen, müssen so eingeplant werden, dass der definierte Zeitpunkt eingehalten wird. Es existieren unterschiedliche Formen von \textbf{Deadlines} bzw. Echtzeitanforderungen: Bei einer \textit{harten} Deadline muss das Ablaufdatum präzise, bei \textit{weicher} Deadline einigermaßen eingehalten werden. Ferner sollte bei jedem Scheduling - Algorithmus versucht werden, die \textbf{Komplexität} so gering wie möglich zu halten (niedrige Aufwände im Bezug auf die O-Notation). Die Scheduling - Operationen sollten \textbf{einfach und schnell} verfahren sowie transparent sein.  
 
-Für alle Scheduling-Systeme ist es wünschenswert, die Effizienz und den Durchsatz zu maximieren sowie  die Ab"-arbeitungs- und Antwortzeiten zu minimieren. In Batch-Systemen wird Wert auf einen hohen Durchsatz und geringe Antwortzeiten gelegt. In interaktiven (time-sharing) Systemen (bspsw. Betriebssystemen) ist es wichtiger, die Varianz der Antwortzeiten anstatt die durschnittliche Antwortzeit zu minimieren. Realzeitsysteme (z.B. Prozessleittechnik, Motorsteuerung, Robotik) hingegen legen einen hohen Wert auf die Einhaltung der Ablaufdaten und geringe Abarbeitungszeiten \cite{asilberschatz}.\\
+Für alle Scheduling - Systeme ist es wünschenswert, die Effizienz und den Durchsatz zu maximieren sowie  die Ab"-arbeitungs- und Antwortzeiten zu minimieren. In Batch-Systemen wird Wert auf einen hohen Durchsatz und geringe Antwortzeiten gelegt. In interaktiven (time - sharing) Systemen (bspsw. Betriebssystemen) ist es wichtiger, die Varianz der Antwortzeiten anstatt die durschnittliche Antwortzeit zu minimieren. Realzeitsysteme (z.B. Prozessleittechnik, Motorsteuerung, Robotik) hingegen legen einen hohen Wert auf die Einhaltung der Ablaufdaten und geringe Abarbeitungszeiten \cite{asilberschatz}.\\
 
 
 %Prozesse können entweder als I/O-gebunden oder als Prozessorgebunden klassifiziert werden (nach \cite{rlove}): Erstere verbringen einen Großteil ihres Lebenszyklus damit, I/O-Ope\-rationen anzuweisen oder darauf zu warten. Bestes Beispiel hierfür sind graphische Userinterfaces wie Texteditoren. Umgekehrt führen prozessorgebundene Prozesse die meiste Zeit ihres Lebenszyklus Code aus und werden häufig durch den Scheduler verdrängt. Ein gutes Beispiel hierfür ist das Tool \textit{ssh-keygen} oder das Rendern eines Videos durch einen Codec.\\
