--- a/latex/Seminararbeit_CFS.tex
+++ b/latex/Seminararbeit_CFS.tex
@@ -47,7 +47,7 @@
 \maketitle
 
 \abstract{
-Die grundlegende Aufgabe eines Prozess - Schedulers ist es, lauffähige Prozesse mit bestmöglicher Erfüllung von bestimmten Kriterien der endlichen Ressource Rechenzeit zuzuteilen. In diesem Artikel werden die Technik und die Prinzipien des Completely Fair Scheduler (CFS) erklärt. CFS ist der aktuelle Linux - Scheduler, der seinen Vorgäng"-er den O(1) - Scheduler seit Kernel - Version 2.6.23 abgelöst hat. Dieser Artikel zeigt, dass der CFS ohne komplexe Algorithmen und Heuristiken das Kriterium Fairness sehr gut erfüllt. Jedem Prozess ist eine Variable \texttt{vruntime} zugeordnet, die auf Nanosekunden genau bestimmt, wie lange der Prozess schon die CPU genutzt hat. Der Prozess mit dem niedrigsten Wert für \texttt{vruntime} hat die höchste Dringlichkeit an CPU - Zeit zu kommen. Als Datenstruktur wird dafür ein nach \texttt{vruntime} sortierter Rot - Sch"-warz - Baum verwendet, wobei das Element mit niedrigstem Schlüssel ganz links steht. Die Wahl des am Nächsten auszuführenden Prozesses ist sehr schnell und einfach, da der linkeste Knoten des Baums immer zwischengespeichert ist und darauf direkt zugegriffen werden kann. Der Vergleich zum O(1) - Scheduler beweist, dass CFS die CPU sehr fair über alle Prozesse im System verteilt und gleichzeitig gute Werte für die Latenz bei interaktiven Aufgaben zeigt, ohne diese explizit wie sein Vorgänger zu bevorzugen.
+Die grundlegende Aufgabe eines Prozess - Schedulers ist es, lauffähige Prozesse mit bestmöglicher Erfüllung von bestimmten Kriterien der endlichen Ressource Rechenzeit zuzuteilen. In diesem Artikel werden die Technik und die Prinzipien des Completely Fair Scheduler (CFS) erklärt. CFS ist der aktuelle Linux - Scheduler, der seinen Vorgäng"-er den O(1) - Scheduler seit Kernel - Version 2.6.23 abgelöst hat. Dieser Artikel zeigt, dass der CFS ohne komplexe Algorithmen und Heuristiken das Kriterium Fairness sehr gut erfüllt. Jedem Prozess ist eine Variable \texttt{vruntime} zugeordnet, die auf Nanosekunden genau bestimmt, wie lange der Prozess schon die CPU genutzt hat. Der Prozess mit dem niedrigsten Wert für \texttt{vruntime} hat die höchste Dringlichkeit an CPU - Zeit zu kommen. Als Datenstruktur wird dafür ein nach \texttt{vruntime} sortierter Rot - Sch"-warz - Baum verwendet, wobei das Element mit niedrigstem Schlüssel ganz links steht. Die Wahl des nächsten auszuführenden Prozesses ist sehr schnell und einfach, da der linkeste Knoten des Baums immer zwischengespeichert ist und darauf direkt zugegriffen werden kann. Der Vergleich zum O(1) - Scheduler beweist, dass CFS die CPU sehr fair über alle Prozesse im System verteilt und gleichzeitig gute Werte für die Latenz bei interaktiven Aufgaben zeigt, ohne diese explizit wie sein Vorgänger zu bevorzugen.
 
 
  } % Trennhilfe \- manchmal nützlich
