--- a/latex/sections/c_structs.tex
+++ b/latex/sections/c_structs.tex
@@ -3,7 +3,7 @@ Im folgenden Abschnitt werden Datenstrukturen und Funktionen der Programmierspra
 
 Wie in Kapitel \ref{s:cfs_fktweise} erläutert, ordnet der CFS jedem Prozess die gewichtete Prozessorzeit \textit{virtual runtime} zu. \\
 In der ersten Version im Kernel 2.6.23 wurde die \textit{virtual runtime} aus der Kombination einer systemweiten \texttt{fair\_ clock} Variable und der Wartezeit eines jeden Prozesses \texttt{wait\_runtime} akkumuliert. Die \textit{fair clock} tickt genau so in Echtzeit, sodass diese im idealen Tempo einer einzelnen Aufgabe läuft, falls N Aufgaben im System sind. Die \textit{wait\_runtime} ist die Zeit einer jeden Aufgabe, in der der Prozessor einer anderen zugeordnet war \cite{cpabla}.\\
-Seit Kernel 2.6.24 ist die \textit{virtual runtime} in der Datenstruktur \texttt{sched\_entity} (eingebettet in der \texttt{struct} für Prozessdeskriptor \texttt{task\_struct}) als Variable \texttt{vruntime} deklariert. Diese ist in Nanosekunden angeben und somit losgelöst von der Frequenz des System - Timers \cite{rlove}. CFS nutzt genau diesen Wert um das \textit{completely fair} Prinzip anzuwenden, also um zu messen wie lange ein Prozess gelaufen ist und somit wie viel länger er laufen sollte.
+Seit Kernel 2.6.24 ist die \textit{virtual runtime} in der Datenstruktur \texttt{sched\_entity} (eingebettet in der \texttt{struct} für Prozessdeskriptor \texttt{task\_struct}) als Variable \texttt{vruntime} deklariert. Diese ist in Nanosekunden angeben und somit losgelöst von der Frequenz des System - Timers \cite{rlove}. CFS nutzt genau diesen Wert um das \textit{completely-fair} Prinzip anzuwenden, also um zu messen wie lange ein Prozess gelaufen ist und somit wie viel länger er laufen sollte.
 Der Wert für die \textit{virtual runtime} ist gleichzeitig der Schlüssel im gewichteten Rot - Schwarz - Baum, der alle lauffähigen Prozesse beinhaltet. Daher beinhaltet \texttt{sched\_entity} auch eine Referenz auf den Rot - Schwarz - Baum in dem sich der lauffähige Prozess befindet. Diese Referenz kann natürlich auch leer sein, da nur Prozesse im Rot - Schwarz - Baum angeordnet sind, die sich auch in einem zur Ausführung bereiten Zustand befinden.
 
 Die Funktion welche genutzt wird, um die  \texttt{virtual \- runtime} stets aktuell zu halten ist \texttt{update\_curr()} aus \texttt{kernel/sched\_fair.c}. Hier wird die Formel \ref{eq:vruntime} aus Kapitel \ref{s:cfs_fktweise} implementiert. Diese berechnet die Aus"-führungszeit des aktuellen Prozesses und speichert den Wert in der Variablen \texttt{delta\_exec}, welche wiederum an die unten aufgeführte Unterfunktion \texttt{\_\_update\_curr()} über"-geben wird. Diese ist dafür zuständig den Wert von \texttt{delta\-\_exec} mit der Anzahl an laufenden Prozessen zu gewichten. Die \texttt{vruntime} des aktuellen Prozesses wird um diesen Wert inkrementiert.  Ein immer präziser Wert für die \textit{virtual runtime} wird erreicht, weil diese Funktion sowohl periodisch durch den Systemtimer als auch jedes Mal wenn ein Prozess blockiert, ausführbar oder nicht mehr lauffähig wird, aufgerufen wird. 
